# RadaCrypto

./: .env.example  .gitignore  AGENTS.md  DEPLOY_FREE_TIER.md  Dockerfile  QA_AUDIT_REPORT.md  README.md  RELEASE_INTERNAL_V1.md  pyproject.toml  railway.json  scan_output.txt  serve.sh  start_all.sh  test_output.txt
.github/workflows/: daily-summary.yml  daily_report.yml  scan-cycle.yml  smoke.yml  weekly-review.yml
apps/dashboard/: README.md
apps/worker-api/: README.md
dashboard/: index.html
docs/: index.html
scripts/: bootstrap.sh  com.cfte.live-loop.plist  dashboard.py  init_sqlite_db.py  live_loop.sh  replay_binance_public.py  reprime_data.py  run_cycle.py  sync_cloud_summary.py
tests/: test_binance_collector_resilience.py  test_binance_depth_reconciler.py  test_binance_futures.py  test_binance_normalizers.py  test_cli_health_mocked.py  test_cli_shell.py  test_collector_observability.py  test_context_quality.py  test_critical_fixes.py  test_database_lock.py  test_execution_foundation.py  test_feed_resilience.py  test_hidden_flow_logic.py  test_live_loop_shell.py  test_local_book.py  test_matrix_measurement.py  test_matrix_tuning.py  test_measurement_layer.py  test_multi_venue_normalization.py  test_onchain_context.py  test_operate_tune.py  test_reliability_runtime.py  test_replay_runner.py  test_run_cycle.py  test_run_id_alignment.py  test_sqlite_bootstrap.py  test_tape_features.py  test_telegram_alerts.py  test_thesis_adapter.py  test_thesis_engine.py  test_thesis_lifecycle.py  test_trader_card.py  test_venue_compare.py  test_vnext_flow.py
(+347 files in other folders)
