[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfte"
version = "0.1.0"
description = "Crypto Flow Thesis Engine starter"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "duckdb>=1.0.0",
  "pyarrow>=16.1.0",
  "requests>=2.31.0",
  "websockets>=12.0",
  "python-dotenv>=1.0.1",
  "pytest>=8.2.0",
  "aiosqlite>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[project.scripts]
cfte = "cfte.cli.main:main"
